# dubnamic-by-default

./: .clang-format  CMakeLists.txt  DBD.cc  DBD.cpp  DBD.hh  record_changes.md
tests/: test-0-simple.c  test-1-for-loop-dynamic-bound.c  test-2-for-loop-static-bound.c  test-3-for-loop-mixed-body.c  test-4-conditional.c  test-5-function-call.c  test-6-function-call-mixed-args.c  test-7a-struct-basic.c  test-7b-struct-c-idiom.c
